make sure there is no independent call to the database or opening of a transaction in the service modules; changes as necessary elsewhere to get rid of errors